# mochi

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.devin/: requirements.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
assets/: AppIcon.icns
assets/terminfo/: mochi.terminfo
docs/: architecture.md  escape-sequences.md  security.md  testing.md
docs/adr/: 0001-terminal-language-and-stack.md
docs/research/: pty-linux.md  vt100-parser.md
docs/terminal/: README.md  architecture.md  config.example.toml  config.md  escape-sequences.md  fonts.md  keybindings.md  security.md  themes.md
docs/terminal/phase2/: architecture-notes.md  compatibility.md  plan.md
terminal/: .rustfmt.toml  Cargo.toml  README.md
terminal/assets/terminfo/: mochi.terminfo
terminal/benches/: parser.rs  screen.rs
terminal/docs/: README.md  architecture.md  escape-sequences.md  security.md
terminal/docs/adr/: 0001-terminal-language-and-stack.md
terminal/mochi-core/: Cargo.toml
terminal/mochi-core/src/: cell.rs  color.rs  cursor.rs  grid.rs  lib.rs  line.rs  screen.rs  scrollback.rs  selection.rs  snapshot.rs  term.rs
terminal/mochi-parser/: Cargo.toml
terminal/mochi-parser/benches/: parser_bench.rs
terminal/mochi-parser/fuzz/: Cargo.toml
terminal/mochi-parser/fuzz/fuzz_targets/: fuzz_parser.rs
terminal/mochi-parser/src/: action.rs  lib.rs  params.rs  parser.rs
terminal/mochi-pty/: Cargo.toml
terminal/mochi-pty/src/: child.rs  error.rs  lib.rs  pty.rs  size.rs
terminal/mochi-term/: Cargo.toml
terminal/mochi-term/src/: app.rs  config.rs  event.rs  event_loop.rs  gpu_renderer.rs  input.rs  main.rs  pane.rs  performer.rs  renderer.rs  shader.wgsl  split.rs  split_pane.rs  terminal.rs
terminal/src/: headless.rs  lib.rs  main.rs  terminal.rs
terminal/src/app/: config.rs  mod.rs
terminal/src/core/: cell.rs  cursor.rs  grid.rs  line.rs  mod.rs  modes.rs  screen.rs  scrollback.rs  selection.rs  snapshot.rs
terminal/src/frontend/: input.rs  mod.rs  renderer.rs  shader.wgsl
terminal/src/gui/: font.rs  input.rs  mod.rs  renderer.rs  selection.rs
terminal/src/input/: mod.rs
terminal/src/parser/: action.rs  actions.rs  mod.rs  state.rs
terminal/src/pty/: linux.rs  mod.rs  unix.rs
terminal/src/renderer/: font.rs  mod.rs  window.rs
terminal/terminal-core/: Cargo.toml
terminal/terminal-core/src/: cell.rs  charset.rs  color.rs  cursor.rs  grid.rs  image.rs  lib.rs  line.rs  modes.rs  screen.rs  scrollback.rs  selection.rs  snapshot.rs
terminal/terminal-core/tests/: cell_color_cursor_tests.rs  cell_tests.rs  charset_tests.rs  color_tests.rs  cursor_tests.rs  future_features_tests.rs  grid_line_modes_tests.rs  grid_tests.rs  lib_tests.rs  line_tests.rs  modes_tests.rs  screen_integration_tests.rs  screen_scrollback_tests.rs  screen_tests.rs  scrollback_tests.rs  selection_tests.rs  snapshot_tests.rs
terminal/terminal-parser/: Cargo.toml
terminal/terminal-parser/src/: action.rs  kitty.rs  lib.rs  params.rs  parser.rs  sixel.rs  utf8.rs
terminal/terminal-parser/tests/: action_tests.rs  params_tests.rs  parser_comprehensive.rs  parser_edge_cases.rs  parser_tests.rs  utf8_tests.rs
terminal/terminal-pty/: Cargo.toml
terminal/terminal-pty/src/: child.rs  error.rs  lib.rs  pty.rs  size.rs
terminal/terminal-pty/tests/: pty_comprehensive_tests.rs  pty_tests.rs
terminal/tests/: golden_tests.rs  integration_tests.rs
terminal/tests/golden/: basic_text.expected  colors.expected  colors.input  colors_256_truecolor.input  cursor_movement.expected  cursor_movement.input  mod.rs
terminal/tests/integration/: mod.rs
