[package]
name = "mochi-term"
version = "0.1.0"
edition = "2021"
authors = ["Mochi Terminal Contributors"]
description = "A real Linux terminal emulator built from scratch"
license = "MIT"
repository = "https://github.com/andrewgcodes/mochi"
keywords = ["terminal", "emulator", "vt100", "xterm", "pty"]
categories = ["command-line-utilities"]

[lib]
name = "mochi_term"
path = "src/lib.rs"

[[bin]]
name = "mochi"
path = "src/main.rs"

[[bin]]
name = "mochi-headless"
path = "src/headless.rs"

[dependencies]
# Window and rendering
winit = "0.28"

# Font rendering
fontdue = "0.7"

# Unicode support (width tables only - we implement terminal rules)
unicode-width = "0.1"
unicode-segmentation = "1.10"

# System/PTY (Linux)
libc = "0.2"
nix = { version = "0.27", features = ["term", "signal", "poll", "process", "fs"] }

# Clipboard (without image support to avoid Rust 1.85+ deps)
arboard = { version = "3.2", default-features = false }

# Serialization (config, snapshots)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
softbuffer = "0.3"

[dev-dependencies]
# Testing
pretty_assertions = "1.4"
tempfile = "3.10"

[features]
default = []

# Fuzzing support - add arbitrary as a regular dependency when fuzzing
[target.'cfg(fuzzing)'.dependencies]
arbitrary = { version = "1.3", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1  # Slightly optimize dev builds for better perf during testing
