[package]
name = "mochi-parser"
description = "Terminal escape sequence parser: VT/xterm state machine for ESC, CSI, OSC, DCS"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
