[package]
name = "mochi-pty"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PTY (pseudo-terminal) handling for Linux"

[dependencies]
log.workspace = true
thiserror.workspace = true
nix.workspace = true
libc.workspace = true

[dev-dependencies]
