[package]
name = "mochi-pty"
description = "PTY management for Linux: spawn child processes, handle I/O, resize"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
libc = { workspace = true }
nix = { workspace = true }
log = { workspace = true }

[dev-dependencies]
