[package]
name = "mochi-term"
description = "Mochi Terminal Emulator - A VT/xterm-compatible terminal"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["gpu"]
gpu = ["wgpu", "pollster", "bytemuck"]

[[bin]]
name = "mochi"
path = "src/main.rs"

[dependencies]
terminal-core = { workspace = true }
terminal-parser = { workspace = true }
terminal-pty = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }

# GUI dependencies
winit = "0.29"
softbuffer = "0.4"
fontdue = "0.9"
arboard = "3.4"

# GPU rendering dependencies (optional, enabled by default)
wgpu = { version = "0.20", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }

# Config
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
proptest = { workspace = true }
