[package]
name = "terminal-pty"
description = "PTY management for terminal emulation (Linux and macOS)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
libc = "0.2"
nix = { version = "0.29", features = ["term", "signal", "poll", "process", "fs"] }

[dev-dependencies]
proptest = { workspace = true }
